# kc11b04-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl  rustfmt.toml
.changes/: config.json  crate-release.md  custom-maps.md  doc-images.md  fix-docsrs.md  generic-over-word.md
.github/workflows/: checks.yml  covector-version-or-publish.yml
src/: driver.rs  lib.rs  map.rs  mapping.rs
